Feat: add stepper and first status component

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="React Truffle Box" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"/>
+    
     <title>React Truffle Box</title>
   </head>
   <body>
